--- a/css/style.css
+++ b/css/style.css
@@ -11,11 +11,97 @@ html {
 }
 
 body {
-  font-size: 1.5rem;
+  font-size: clamp(1.6rem, 1.8vw, 2.3rem);
   line-height: 1.5;
+  font-family: "Oswald", sans-serif;
+  letter-spacing: 1px;
+
+  background-image: url("../resources/Form-bg.jpg");
+  background-size: cover;
 
   max-width: 100vw;
   min-height: 100vh;
+
+  overflow-x: hidden;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-/* ##################################TYPOGRAPHY################################# */
+h1 {
+  text-align: center;
+  margin: 0;
+  font-size: clamp(6rem, 8.5vw, 10rem);
+  font-family: "Bebas Neue", cursive;
+  letter-spacing: 2px;
+}
+
+/* ##################################REGISTRATION FORM################################# */
+
+.wrapper {
+  width: clamp(400px, 60vw, 80rem);
+
+  padding: clamp(2rem, 2.5vw, 4rem);
+
+  background-image: url("../resources/Form-bg.jpg");
+  background-size: cover;
+  border-radius: 20px;
+  box-shadow: 0 0 10px hsl(300, 100%, 35%, 0.6);
+}
+
+form {
+  margin: 4rem auto;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+form div > * {
+  display: block;
+}
+
+.invisible {
+  display: none;
+}
+
+.input-basic {
+  width: 100%;
+
+  margin: 0;
+  padding: 0.3em 0.4em;
+
+  border: 0;
+  border-bottom: 1px solid hsl(0, 0%, 0%, 0.2);
+
+  background-color: transparent;
+  outline: none;
+  /* color: white; */
+}
+
+.buttons {
+  margin-top: 3rem;
+  height: 8em;
+  padding: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 4rem;
+}
+
+.buttons > button {
+  border: 1px solid black;
+  background-color: transparent;
+  display: inline-block;
+  width: 10em;
+  height: 3em;
+  padding: 0.5em 2em;
+  color: black;
+  font-size: clamp(2rem, 2.5vw, 3rem);
+  cursor: pointer;
+}
+
+.buttons > button:hover {
+  border: 3px solid black;
+  font-weight: bold;
+}
