--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,8 @@ h1 {
 /* ##################################REGISTRATION FORM################################# */
 
 .wrapper {
-  width: clamp(400px, 60vw, 80rem);
+  width: clamp(360px, 60vw, 70rem);
+  /* ustawic na max 450px */
 
   padding: clamp(2rem, 2.5vw, 4rem);
 
@@ -61,6 +62,28 @@ form div > * {
   display: block;
 }
 
+form div {
+  position: relative;
+}
+
+form div p {
+  color: #8c0822;
+  display: none;
+}
+
+.warning-sign::before {
+  content: url("../resources/cancel.svg");
+  display: block;
+
+  position: absolute;
+  top: 10px;
+  right: 0;
+}
+
+form div input::placeholder {
+  opacity: 0.5;
+}
+
 .invisible {
   display: none;
 }
@@ -76,7 +99,10 @@ form div > * {
 
   background-color: transparent;
   outline: none;
-  /* color: white; */
+}
+
+.input-basic:focus {
+  background-color: transparent;
 }
 
 .buttons {
@@ -104,4 +130,8 @@ form div > * {
 .buttons > button:hover {
   border: 3px solid black;
   font-weight: bold;
+}
+
+.error {
+  display: block;
 }
